# clib-gems

./: .gitignore  CNAME  Makefile  Makefile.am  README.md  autogen.sh  common.mak  configure.ac  index.html  malloc.c  params.json  pthread.c  regex.h  stdio.h
armv7l-linux/: baseline.json  improvement.json  portme.mak
armv7l-linux/pat/Config/: Config.h
m4/: canoncial_system.m4
pat/include/pat/: CSVResultPrinter.h  OStrStream.h  StringRef.h  StringSwitch.h  pat.h
pat/include/pat/Config/: Config.h.in
pat/lib/: CSVResultPrinter.cpp  Color.cpp  ManagedStatic.cpp  Path.cpp  Perf.cpp  PrettyResultPrinter.cpp  StringRef.cpp  Test.cpp  Timer.cpp  pat.cpp
pat/lib/Unix/: Perf.inc  Timer.inc
portme/: pat.pc  portme.mak
scripts/: build.sh
src/: Makefile.am  main.c  main.cpp  malloc.c  malloc.h  malloc_test.c  malloc_test.h  pthread.h  pthread_test.c  pthread_test.h  regex.c  regex.h  regex_test.h  sprintf.c  sprintf_test.c  sprintf_test.h  sscanf.c  sscanf_test.c  sscanf_test.h  stdio_test.h  string.c  string.h  string_test.c  string_test.h  utf8.h  utf8_test.c  utf8_test.h
x86_64-darwin/: portme.mak
x86_64-darwin/pat/Config/: Config.h
x86_64-linux/: portme.mak
x86_64-linux/pat/Config/: Config.h
